--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codesandbox/sandpack-react": "^2.20.0",
+    "@codesandbox/sandpack-themes": "^2.0.21",
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.17",
-    "better-auth": "^1.3.34",
+    "better-auth": "^1.4.1",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.554.0",
     "mui": "^0.0.1",
     "ogl": "^1.0.11",
     "react": "^19.2.0",
