--- a/mcp/package.json
+++ b/mcp/package.json
@@ -1,19 +1,43 @@
 {
-  "name": "mcp",
+  "name": "composter-mcp",
   "version": "1.0.0",
   "type": "module",
+  "description": "MCP (Model Context Protocol) server for Composter - Let AI assistants access your React component vault",
+  "main": "src/server.js",
+  "bin": {
+    "composter-mcp": "./src/server.js"
+  },
   "scripts": {
     "start": "node src/server.js",
     "server:inspect": "npx @modelcontextprotocol/inspector node src/server.js"
   },
+  "keywords": [
+    "mcp",
+    "model-context-protocol",
+    "ai",
+    "claude",
+    "cursor",
+    "copilot",
+    "react",
+    "components",
+    "composter"
+  ],
+  "author": "binit2-1",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/binit2-1/Composter.git"
+  },
+  "homepage": "https://composter.vercel.app",
+  "bugs": {
+    "url": "https://github.com/binit2-1/Composter/issues"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.23.0",
-    "@prisma/adapter-pg": "^7.0.1",
-    "@prisma/client": "^7.0.1",
-    "dotenv": "^16.4.5",
-    "jose": "^6.1.2",
-    "pg": "^8.16.3",
-    "zod": "^4.1.13"
+    "zod": "^3.23.0"
   },
   "devDependencies": {
     "@modelcontextprotocol/inspector": "^0.17.2"
