chore: Bump version to 1.0.14, remove MCP-related files, and update init command for new MCP package

--- a/cli/package.json
+++ b/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "composter-cli",
-  "version": "1.0.11",
+  "version": "1.0.14",
   "type": "module",
   "description": "Your personal vault for React components. Push, pull, and sync reusable components across projects — like shadcn/ui but for YOUR code.",
   "main": "src/index.js",
@@ -36,7 +36,6 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.24.3",
     "commander": "^14.0.2",
     "dotenv": "^16.4.5",
     "inquirer": "^13.0.1",
@@ -44,7 +43,6 @@
   },
   "files": [
     "src/",
-    "bin/",
-    "mcp/"
+    "bin/"
   ]
 }
