--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "build": "npm install && npx prisma generate && npx prisma migrate deploy",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "prisma generate"
   },
   "author": "",
   "license": "ISC",
