--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,8 @@
     "react-syntax-highlighter": "^16.1.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
-    "vite": "^7.2.2"
+    "vite": "^7.2.2",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
